yax/manuscript/v1/tables/table2b_joint_construct_residual_audit.md
| AI measure | R-squared on eight characteristics | Residual SD | Effective occupations | Top-five share | Five largest contributors |
|---|---|---|---|---|---|
| AIOE, administrative equal | 0.964 | 0.189 | 35.5 | 30.4% | Security guards and gambling surveillance officers; Driver/sales workers and truck drivers; Registered nurses; Sales representatives, wholesale and manufacturing; Hairdressers, hairstylists, and cosmetologists |
| AIOE, ability direct | 0.954 | 0.214 | 37.8 | 29.0% | Customer service representatives; Driver/sales workers and truck drivers; Maids and housekeeping cleaners; Registered nurses; Security guards and gambling surveillance officers |
| AIOE, OEWS source weighted | 0.971 | 0.171 | 44.2 | 24.9% | Registered nurses; Sales representatives, wholesale and manufacturing; Chief executives; Driver/sales workers and truck drivers; Hairdressers, hairstylists, and cosmetologists |
| Eloundou alpha (E1) | 0.368 | 0.795 | 31.5 | 33.7% | Bookkeeping, accounting, and auditing clerks; Interpreters and translators; Data entry keyers; Driver/sales workers and truck drivers; First-Line supervisors of office and administrative support workers |
| Eloundou beta (E1 + 0.5 E2) | 0.743 | 0.507 | 36.9 | 28.0% | Driver/sales workers and truck drivers; First-Line supervisors of retail sales workers; Bookkeeping, accounting, and auditing clerks; Interpreters and translators; Hairdressers, hairstylists, and cosmetologists |
| Eloundou broad (E1 + E2) | 0.811 | 0.435 | 31.5 | 29.7% | First-Line supervisors of retail sales workers; Driver/sales workers and truck drivers; Hairdressers, hairstylists, and cosmetologists; Sales representatives, wholesale and manufacturing; Bus and truck mechanics and diesel engine specialists |

Note: Joint residualization uses 348 occupations on common complete support and pre-outcome pre-period employment-stock weights. Source: TEST_A_RESIDUAL_DIAGNOSTICS.csv.
